--- a/public/global.css
+++ b/public/global.css
@@ -3,10 +3,11 @@ body {
     position: relative;
     width: 100%;
     height: 100%;
+    background-color: black;
 }
 
 body {
-    color: #333;
+    color: white;
     margin: 0;
     padding: 8px;
     box-sizing: border-box;
