--- a/public/global.css
+++ b/public/global.css
@@ -1,13 +1,18 @@
+:root {
+    --body-color: #fff;
+    --body-background-color: #000;
+}
+
 html,
 body {
     position: relative;
     width: 100%;
     height: 100%;
-    background-color: black;
+    background-color: var(--body-background-color);
 }
 
 body {
-    color: white;
+    color: var(--body-color);
     margin: 0;
     padding: 8px;
     box-sizing: border-box;
